# wfs-tools-web

./: .cursorignore  .gitignore  .gitmodules  .prettierrc.json  CMakeLists.txt  CMakePresets.json  README.md  index.html  package-lock.json  package.json  tsconfig.json  vcpkg.json  vite.config.ts  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  deploy.yml
cpp/: CMakeLists.txt  bindings.cpp
custom-triplets/: wasm32-emscripten-pthread.cmake
scripts/: build-wasm.js
src/: App.tsx  fs-access-client.ts  index.css  index.html  index.ts  js-file-device.ts  styles.css  wfs-async-queue.ts
src/assets/wasm/: wfslib_web.d.ts
src/components/: device-selection.tsx  file-upload-card.tsx  theme-provider.tsx  theme-switcher.tsx
src/components/common/: DeviceSelection.tsx  ErrorBoundary.tsx  ErrorPage.tsx  LoadingScreen.tsx  RouterrErrorPage.tsx  WfsLibInitializer.tsx
src/components/layout/: AppLayout.tsx  EnsureWfsDeviceRoute.tsx
src/hooks/: useWfsLib.ts
src/pages/: DirectoryBrowserPage.tsx  LoadWfsImagePage.tsx  NotFoundPage.tsx
src/router/: AppRouter.tsx
src/services/wfslib/: WfsLibProvider.tsx  jsFileDevice.ts  loader.ts  wfsAsyncQueue.ts  wfsLibLoader.ts
src/theme/: ThemeContext.tsx  theme.ts
src/types/: file-system-access.d.ts  wfslib.d.ts
src/utils/: fsAccess.ts
